--- a/views/index.html
+++ b/views/index.html
@@ -56,6 +56,7 @@
                         <li class="list-group-item">
                           <h4 class='inline-header'>Album Name:</h4>
                           <span class='album-name'>Ladyhawke</span>
+
                         </li>
 
                         <li class="list-group-item">
@@ -69,6 +70,12 @@
                         </li>
                       </ul>
                     </div>
+
+
+                     `<li class='list-group-item'>
+                      <h4 class='inline-header'>Album Name:</h4>
+                      <span class='album-name'>${album.name}</span>
+                    </li>`
 
                   </div>
                   <!-- end of album internal row -->
