working on sprint5

--- a/views/index.html
+++ b/views/index.html
@@ -151,6 +151,8 @@
                     <div class='panel-footer'>
                       <button class='btn btn-primary add-song'>Add Song</button>
                       <button class='btn btn-primary delete-album'>Delete Album</button>
+                      <button class='btn btn-primary edit-album'>Edit Album</button>
+                      <button class='btn btn-primary save-changes'>Save Changes</button>
                     </div>
 
                   </div>
